test/configCases/errors/circular-dependency-enhanced/webpack.config.js
"use strict";

/** @type {import("../../../../").Configuration} */
module.exports = {
	mode: "development",
	entry: "./index.js"
};

